# memory-mosaics-jax

./: .gitignore  README.md  colab_train.ipynb  config.py  data.py  gpt2.py  memory_mosaic.py  plot_fig7.py  pyproject.toml  test_smoke.py  train.py
